Update jvm args